# fortress-optimizer-monorepo

./: .cloud_config.json  .collaboration_config  .env.template  .gitignore  .rebuild  .workspace_hub_sync.json  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_MANUAL.md  BUILD_COMPLETE_SUMMARY.md  COMPLETE_END_TO_END_TEST_REPORT.md  COMPREHENSIVE_GAP_ANALYSIS.md  DELIVERY_INDEX.md  DEPLOYMENT_4_STEPS_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SERVER_SIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_CURRENT.md  DEVELOPMENT.md  DOCUMENTATION_DEPLOYMENT_COMPLETE.md  ECS_DEPLOYMENT_QUICK_GUIDE.md  FORTRESS_STATUS_COMPLETE.md  FOUNDATION_COMPLETE.md  IMA_ECOSYSTEM_EXPANSION_STRATEGY.md  LAUNCH_CHECKLIST.md  LAUNCH_READINESS_REPORT.md  LAUNCH_SUMMARY_FINAL.md  MCP_LLM_INTEGRATION_STRATEGY.md  OFFLINE_ARCHITECTURE_ANALYSIS.md  PHASE_1_2_SUMMARY.md  PRE_LAUNCH_CHECKLIST.md  PRODUCTION_LIVE.md  PRODUCT_LAUNCH_TESTING_MATRIX.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REINVESTMENT_ACCELERATION_STRATEGY.md  REINVESTMENT_INTEGRATION_SUMMARY.md  SAVINGS_BANDS_EXAMPLES.md  SAVINGS_BANDS_GUIDE.md  SAVINGS_BANDS_QUICK_REF.md  (+44 more)
backend/: .env.template  Dockerfile  Dockerfile.test  cleanup.py  config.py  cost_predictor.py  database.py  extension_routes.py  main.py  middleware.py  mock_app.py  mock_app_basic.py  mock_app_v2_full_auth.py  models.py  product-functionality-results-1771118769.json  product-functionality-results-1771118792.json  test_api.py  (+11 more)
shared-libs/: README.md  VSC Extensions.code-workspace  __init__.py  core.py  fortress_types.py  http_client.py  pyproject.toml  types.py
(+831 files in other folders)
